# seraph

./: Anchor.toml  Cargo.toml  README.md
programs/seraph/: Cargo.toml
programs/seraph/src/: constants.rs  error.rs  lib.rs
programs/seraph/src/instructions/: calculate_score.rs  deactivate_stake.rs  delegate_stake.rs  initialize.rs  mod.rs  redelegate.rs  redelegate_stake.rs
programs/seraph/src/state/: mod.rs
programs/validator-history/src/instructions/: set_new_tip_distribution_program.rs
tests/: Cargo.toml  seraph.ts
tests/src/: fixtures.rs  lib.rs  seraph_fixtures.rs
tests/tests/: test_gossip.rs  test_seraph.rs
