[package]
name = "seraph"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seraph"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", default-features = false, features = ["stake", "mint", "spl-token", "token"] }
ahash = "=0.8.6"
validator-history = { path = "../validator-history" }
static_assertions = "1.1.0"
thiserror = "1.0.37"
type-layout = "0.2"
bincode = "1.3.3"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
